--- a/app/index.html
+++ b/app/index.html
@@ -1,101 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="$FLUTTER_BASE_HREF">
+
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>InstaScheduler</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background: #4a90e2;
-      color: #fff;
-      text-align: center;
-      padding: 100px 20px;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 3rem;
-    }
-    header p {
-      font-size: 1.2rem;
-      margin: 20px 0;
-    }
-    .btn {
-      display: inline-block;
-      background: #fff;
-      color: #4a90e2;
-      padding: 12px 24px;
-      text-decoration: none;
-      border-radius: 4px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-    .btn:hover {
-      background: #f0f0f0;
-    }
-    section.features {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-    }
-    .feature-card {
-      flex: 1 1 280px;
-      margin: 10px;
-      padding: 20px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      text-align: center;
-    }
-    .feature-card h3 {
-      margin-top: 0;
-      font-size: 1.5rem;
-    }
-    footer {
-      background: #222;
-      color: #aaa;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-    }
-    footer a {
-      color: #4a90e2;
-      text-decoration: none;
-    }
-  </style>
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="instascheduler">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>instascheduler</title>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <header>
-    <h1>InstaScheduler</h1>
-    <p>Automate your social media posts effortlessly.</p>
-    <a href="/app/index.html" class="btn">Launch App</a>
-  </header>
-
-  <section class="features">
-    <div class="feature-card">
-      <h3>Schedule Posts</h3>
-      <p>Plan and queue your Instagram and YouTube content in advance.</p>
-    </div>
-    <div class="feature-card">
-      <h3>Calendar View</h3>
-      <p>Visualize your content schedule with an interactive calendar.</p>
-    </div>
-    <div class="feature-card">
-      <h3>Analytics</h3>
-      <p>Track post performance and engagement metrics.</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 InstaScheduler. All rights reserved.</p>
-    <p><a href="https://github.com/randawehbe/randawehbe.github.io">GitHub Repository</a></p>
-  </footer>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
