--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
   <base href="/app/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="InstaScheduler Web App">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -19,32 +33,6 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <!-- SPLASH SCREEN: shows until Flutter paints first frame -->
-  <div id="splash" style="
-      position: fixed;
-      inset: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #fff;
-      font-family: sans-serif;
-  ">
-    <div style="text-align: center;">
-      <!-- replace with your own logo if you like -->
-      <img src="assets/logo.png" alt="InstaScheduler" width="120" />
-      <p>Loading InstaScheduler…</p>
-    </div>
-  </div>
-
-  <!-- Flutter bootstrap: this loads the engine and main.dart.js -->
   <script src="flutter_bootstrap.js" async></script>
-
-  <!-- once Flutter paints its first frame, hide the splash -->
-  <script>
-    window.addEventListener('flutter-first-frame', () => {
-      const splash = document.getElementById('splash');
-      if (splash) splash.style.display = 'none';
-    });
-  </script>
 </body>
 </html>
