--- a/app/index.html
+++ b/app/index.html
@@ -34,5 +34,25 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/app/flutter_service_worker.js')
+        .then(reg => {
+          // When the new SW takes control, reload so we get the fresh cache.
+          reg.addEventListener('updatefound', () => {
+            const newSW = reg.installing;
+            newSW.addEventListener('statechange', () => {
+              if (newSW.state === 'activated') {
+                window.location.reload();
+              }
+            });
+          });
+        })
+        .catch(err => console.error('SW registration failed:', err));
+    });
+  }
+</script>
+
 </body>
 </html>
